[gd_scene load_steps=7 format=2]

[ext_resource path="res://StartMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/book_covers/A_Journey_to_the_Centre_of_the_Earth-1874.jpg" type="Texture" id=2]
[ext_resource path="res://assets/book_covers/From_the_Earth_to_the_Moon_Jules_Verne.jpg" type="Texture" id=3]
[ext_resource path="res://assets/book_covers/Verne_Tour_du_Monde.jpg" type="Texture" id=4]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

// Gonkee's fog shader for Godot 3 - full tutorial https://youtu.be/QEaTsz_0o44
// If you use this shader, I would prefer it if you gave credit to me and my channel

uniform vec3 color = vec3(0.5490, 0.2471, 0.3647);
uniform int OCTAVES = 4;

float rand(vec2 coord){
	return fract(sin(dot(coord, vec2(56, 78)) * 1000.0) * 1000.0);
}

float noise(vec2 coord){
	vec2 i = floor(coord);
	vec2 f = fract(coord);

	// 4 corners of a rectangle surrounding our point
	float a = rand(i);
	float b = rand(i + vec2(1.0, 0.0));
	float c = rand(i + vec2(0.0, 1.0));
	float d = rand(i + vec2(1.0, 1.0));

	vec2 cubic = f * f * (3.0 - 2.0 * f);

	return mix(a, b, cubic.x) + (c - a) * cubic.y * (1.0 - cubic.x) + (d - b) * cubic.x * cubic.y;
}

float fbm(vec2 coord){
	float value = 0.0;
	float scale = 0.5;

	for(int i = 0; i < OCTAVES; i++){
		value += noise(coord) * scale;
		coord *= 2.0;
		scale *= 0.5;
	}
	return value;
}

void fragment() {
	vec2 coord = UV * 20.0;

	vec2 motion = vec2( fbm(coord + vec2(TIME * -0.5, TIME * 0.5)) );

	float final = fbm(coord + motion);

	COLOR = vec4(color, final * 0.5);
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/color = Vector3( 0.549, 0.2471, 0.3647 )
shader_param/OCTAVES = 4

[node name="StartMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.258824, 0.141176, 0.270588, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fog" type="ColorRect" parent="."]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 0.709804, 0.439216, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -184.659
margin_top = -100.94
margin_right = -184.659
margin_bottom = -100.94
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
visible = false
margin_left = 379.0
margin_top = 233.0
margin_right = 644.0
margin_bottom = 367.0

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 265.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Jules Verne's books"

[node name="Level1" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 265.0
margin_bottom = 38.0
text = "A journey to the centre of the earth"

[node name="Level2" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 265.0
margin_bottom = 62.0
text = "From the earth to the moon"

[node name="Level3" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 66.0
margin_right = 265.0
margin_bottom = 86.0
text = "Twenty thousand leagues under the sea"

[node name="Level4" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 90.0
margin_right = 265.0
margin_bottom = 110.0
text = "Around the world in 80 days"

[node name="QuitGameButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 114.0
margin_right = 265.0
margin_bottom = 134.0
text = "Quit Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -367.0
margin_top = 125.0
margin_right = 364.0
margin_bottom = 495.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToTheCentre" type="TextureButton" parent="HBoxContainer"]
margin_right = 241.0
margin_bottom = 370.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 2 )
expand = true

[node name="AroundTheWorld" type="TextureButton" parent="HBoxContainer"]
margin_left = 245.0
margin_right = 486.0
margin_bottom = 370.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 4 )
expand = true

[node name="ToTheMoon" type="TextureButton" parent="HBoxContainer"]
margin_left = 490.0
margin_right = 731.0
margin_bottom = 370.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 3 )
expand = true
[connection signal="pressed" from="CenterContainer/VBoxContainer/Level1" to="." method="_on_Level1_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Level2" to="." method="_on_StartGameButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Level3" to="." method="_on_StartGameButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Level4" to="." method="_on_StartGameButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitGameButton" to="." method="_on_QuitGameButton_pressed"]
[connection signal="pressed" from="HBoxContainer/ToTheCentre" to="." method="_on_ToTheCentre_pressed"]
[connection signal="pressed" from="HBoxContainer/AroundTheWorld" to="." method="_on_AroundTheWorld_pressed"]
[connection signal="pressed" from="HBoxContainer/ToTheMoon" to="." method="_on_ToTheMoon_pressed"]
